# SerialPort

./: .gitignore  CMakeLists.txt  main.cpp
ArduinoCodes/sendReceiveData/: sendReceiveData.ino
include/: SerialPort.hpp
src/: SerialPort.cpp
